# article-generator

./: .env.example  .gitignore  DOCKERFILE  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
api/: client.py  main.py
database/alembic/: env.py
database/alembic/versions/: 85af2a62da69_init.py  b6c68bd5acf4_init.py  f282e445c177_init.py
database/models/: publication_log.py  topic.py
services/: deepseek_service.py  dzen_posting.py  dzen_service.py  image_service.py  logger.py  publication_log_service.py  scheduler_service.py  telegram_autopost.py  telegram_posting.py  topic_service.py
services/tools/: web_search.py
telegram/: bot.py  command_handler.py
telegram/handlers/: create_topic.py  generate_article.py  stats.py  topic.py
telegram/keyboards/: callback.py  main.py
telegram/states/: topic.py
tests/: test_dzen_posting.py  test_other.py
utils/: other.py  publish_times.py
